[package]
name = "everybody_codes"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
cbc = "0.1.2"
dotenv = "0.15.0"
fancy-regex = "0.16.2"
hex = "0.4.3"
num-traits = "0.2.19"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
